--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -5,3 +5,30 @@
 @charset "utf-8";
 
 @import "minimal-mistakes";
+
+input[type="submit"] {
+	margin: 30px 0 0 0;
+	font-size: 20px;
+}
+
+.search {
+	width: 50%;
+	margin: 0 auto;
+	padding: 100px 0;
+}
+
+textarea,
+input[type="text"] {
+	width: 100%;
+	padding: 10px;
+	font-size: 18px;
+	display: block;
+	box-sizing: padding-box;
+}
+
+textarea {
+	height: 250px;
+	line-height: 1.5em;
+	border: 1px solid #ccc;
+	resize: none;
+}
