--- a/_layouts/search_default.html
+++ b/_layouts/search_default.html
@@ -15,19 +15,13 @@
 				<nav class="main-nav">
 					<ul>
 						<li><a href="/">Home</a></li>
-						<li><a href="/blog.html">Blog</a></li>
+						<li><a href="/index.html">Blog</a></li>
 					</ul>
 				</nav>
-				<h1><a href="/">Bakery<strong>Store</strong></a></h1>
 			</div>
 		</header>
 		<div class="content">
 			{{ content }}
 		</div>
-		<footer>
-			<div class="container">
-				<p class="center-text"> <a href="http://cloudcannon.com">Created by CloudCannon</a></p>
-			</div>
-		</footer>
 	</body>
 </html>
