--- a/_layouts/search_default.html
+++ b/_layouts/search_default.html
@@ -1,6 +1,3 @@
----
----
-
 <!doctype html>
 <html lang="en">
 	<head>
@@ -15,9 +12,10 @@
 				<nav class="main-nav">
 					<ul>
 						<li><a href="/">Home</a></li>
-						<li><a href="/index.html">Blog</a></li>
+						<li><a href="/blog.html">Blog</a></li>
 					</ul>
 				</nav>
+				<h1><a href="/">Bakery<strong>Store</strong></a></h1>
 			</div>
 		</header>
 		<div class="content">
