--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,11 +1,12 @@
 <!-- start custom footer snippets -->
-<head>
-  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-  <script>
-    (adsbygoogle = window.adsbygoogle || []).push({
-      google_ad_client: "ca-pub-8241314451378836",
-      enable_page_level_ads: true
-    });
-  </script>
-</head>
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <div align="center" style="margin: 1em 0;">
+  <ins class="adsbygoogle"
+       style="display:block; border-bottom: initial;"
+       data-ad-client="ca-pub-8241314451378836"
+       data-ad-format="auto"></ins>
+  </div>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 <!-- end custom footer snippets -->
