--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -6,4 +6,7 @@
     enable_page_level_ads: true
   });
 </script>
+
+<script type="text/javascript"> var infolinks_pid = 3084535; var infolinks_wsid = 0; </script> 
+<script type="text/javascript" src="//resources.infolinks.com/js/infolinks_main.js"></script>
 <!-- end custom footer snippets -->
