--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -7,6 +7,8 @@
   });
 </script>
 
+<script type="text/javascript"> var infolinks_pid = 3084535; var infolinks_wsid = 0; </script> 
+<script type="text/javascript" src="//resources.infolinks.com/js/infolinks_main.js"></script>
 <!-- insert favicons. use http://realfavicongenerator.net/ -->
 
 <!-- end custom head snippets -->
