--- a/_layouts/search.html
+++ b/_layouts/search.html
@@ -25,8 +25,8 @@ layout: default
     {%- assign search_provider = site.search_provider | default: "lunr" -%}
     {%- case search_provider -%}
       {%- when "lunr" -%}
-        <input type="text" id="search" class="search-input" tabindex="-1" placeholder="{{ site.data.ui-text[site.locale].search_placeholder_text | default: 'Enter your search term...' }}" />
-        <div id="results" class="results"></div>
+        <div class="search-searchbar"></div>
+        <div class="search-hits"></div>
       {%- when "google" -%}
         <form onsubmit="return executeQuery();" id="cse-search-box-form-id">
         <input type="text" id="cse-search-input-box-id" class="search-input" tabindex="-1" placeholder="{{ site.data.ui-text[site.locale].search_placeholder_text | default: 'Enter your search term...' }}" />
